2010-09-19  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/old-window-menu.jl: removed. it has been replaced
	by beos-window-menu in version 0.28.1

	* lisp/sawfish/wm/ext/3d-hack.jl: removed.

2010-09-18  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widgets/simple-dialog.jl: renamed sawfish.gtk.stock
	to sawfish.gtk.widgets.simple-dialog as the functions `about-dialog'
	-(replaced by native gtk-about-dialog) and `stock-button' (replaced by
	native gtk-button-new-from-stock) have been removed and `simple-dialog'
	is the only remaining function. A wrong export has been removed, too.

	* lisp/sawfish/gtk/Makefile.in
	* lisp/sawfish/cfg/shell.jl
	* lisp/sawfish/cfg/apply.jl
	* lisp/sawfish/cfg/widgets/keymap.jl
	* lisp/sawfish/cfg/widgets/match-window.jl
	* lisp/sawfish/gtk/widget-dialog.jl: updated for above change

	* lisp/sawfish/gtk/widget-dialog.jl
	* lisp/sawfish/gtk/widgets/simple-dialog.jl: merged widget-dialog.jl
	into simple-dialog.jl

	* lisp/sawfish/gtk/widget-test.jl: removed, since it is heavily broken

2010-09-17  Christopher Brautsek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/windows.jl: added `never-delete' window-matcher.
	Window matched by this can't be deleted by the `delete-window-safely'
	function, only by `delete-window' (which equals to `xkill').

	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/commands/move-resize.jl: added `fixed-size' window-matcher.
	Window matched by this can't be resized by the `resize-window-interactively',
	`halve-window-size' or `double-window-size' functions, but by maximize-*.

	* lisp/sawfish/wm/keymaps.jl: by default the close-buttons calls `delete-window-safely'
	rather than `delete-window'.

2010-09-16  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/commands/grow-pack.jl
	* lisp/sawfish/wm/ext/window-history.jl
	* lisp/sawfish/wm/state/wm-spec.jl
	* man/news.texi
	* themes/mxflat/theme.jl: Minor doc, including news.
