@@ -18,8 +18,6 @@ lisp/sawfish/cfg/widgets/match-window.jl
 lisp/sawfish/cfg/widgets/modifier-list.jl
 lisp/sawfish/cfg/widgets/workspace-geometry.jl
 lisp/sawfish/cfg/wm.jl
-lisp/sawfish/gtk/stock.jl
-lisp/sawfish/gtk/widget-dialog.jl
 lisp/sawfish/gtk/widget-test.jl
 lisp/sawfish/gtk/widget.jl
 lisp/sawfish/gtk/widgets/alist.jl
@@ -28,6 +26,7 @@ lisp/sawfish/gtk/widgets/file.jl
 lisp/sawfish/gtk/widgets/font.jl
 lisp/sawfish/gtk/widgets/list.jl
 lisp/sawfish/gtk/widgets/pair.jl
+lisp/sawfish/gtk/widgets/simple-dialog.jl
 lisp/sawfish/gtk/widgets/program.jl
 lisp/sawfish/gtk/widgets/scheme-boolean.jl
 lisp/sawfish/wm/animation/outline.jl
@@ -54,17 +53,16 @@ lisp/sawfish/wm/custom-defaults.jl
 lisp/sawfish/wm/custom.jl
 lisp/sawfish/wm/customize.jl
 lisp/sawfish/wm/defaults.jl
-lisp/sawfish/wm/ext/3d-hack.jl
 lisp/sawfish/wm/ext/apps-menu.jl
 lisp/sawfish/wm/ext/audio-events.jl
 lisp/sawfish/wm/ext/auto-raise.jl
 lisp/sawfish/wm/ext/beos-window-menu.jl
 lisp/sawfish/wm/ext/edge-flip.jl
 lisp/sawfish/wm/ext/error-handler.jl
+lisp/sawfish/wm/ext/jump-or-exec.jl
 lisp/sawfish/wm/ext/hide-dialogs.jl
 lisp/sawfish/wm/ext/infinite-desktop.jl
 lisp/sawfish/wm/ext/match-window.jl
-lisp/sawfish/wm/ext/old-window-menu.jl
 lisp/sawfish/wm/ext/shade-hover.jl
 lisp/sawfish/wm/ext/tooltips.jl
 lisp/sawfish/wm/ext/window-history.jl
