@@ -4,6 +4,10 @@
 
 	* lisp/sawfish/wm/ext/3d-hack.jl: removed.
 
+	* po/POTFILES.in: updated
+
+	* po/sawfish.pot: updated
+
 2010-09-18  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widgets/simple-dialog.jl: renamed sawfish.gtk.stock
 	to sawfish.gtk.widgets.simple-dialog as the functions `about-dialog'
